change screen support class standard

--- a/components.scss
+++ b/components.scss
@@ -1,7 +1,7 @@
 @each $screen-prefix, $sizes in get-screens-map($grid-offset-columns-screens-support-skip-screens) {
     @media(min-width: get-screen-size($screen-prefix, min)) {
         @for $i from 1 through $grid-columns {
-            .#{$grid-column-class-prefix}-offset-#{$screen-prefix}-#{$i} {
+            .#{$screen-prefix}-#{$grid-column-class-prefix}-offset-#{$i} {
                 margin-left: percentage($i/$grid-columns);
             }
         }
