implement new columns definition

--- a/components.scss
+++ b/components.scss
@@ -1,8 +1,8 @@
 @each $screen-prefix, $sizes in get-screens-map($grid-offset-columns-screens-support-skip-screens) {
     @media(min-width: get-screen-size($screen-prefix, min)) {
-        @for $i from 1 through $grid-columns {
-            .#{$screen-prefix}-#{$grid-column-class-prefix}-offset-#{$i} {
-                margin-left: percentage($i/$grid-columns);
+        @each $prefix, $size in $grid-columns {
+            .#{$screen-prefix}-#{$grid-column-class-prefix}-offset-#{$prefix} {
+                margin-left: $size;
             }
         }
     }
